--- a/_08_EXpressWiki/package.json
+++ b/_08_EXpressWiki/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "Blog System",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "engines": {
     "node": "10.5.0",
     "npm": "5.7.1"
