--- a/_08_EXpressWiki/package.json
+++ b/_08_EXpressWiki/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "1.18.3",
+    "bootstrap": "4.1.1",
     "cookie-parser": "1.4.3",
     "express": "4.16.3",
     "express-handlebars": "3.0.0",
